# council-of-high-intelligence

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COOLIFY.md  Dockerfile  GEMINI.md  NOTICE  README.md  README.ru.md  SKILL.antigravity.md  SKILL.codex.md  SKILL.gemini.md  SKILL.md  SKILL.opencode.md  agno_council.py  docker-compose.coolify.yml  gemini-extension.json  install.sh  proposal.md  protocol.json  pyproject.toml  run_framework.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  (+1 more)
agents/: council-ada.md  council-aristotle.md  council-aurelius.md  council-feynman.md  council-kahneman.md  council-karpathy.md  council-lao-tzu.md  council-machiavelli.md  council-meadows.md  council-munger.md  council-musashi.md  council-rams.md  council-socrates.md  council-sun-tzu.md  council-sutskever.md  council-taleb.md  council-torvalds.md  council-watts.md
commands/: council.toml
configs/: auto-route-defaults.yaml  mcp-provider-slots.yaml  protocol.json  provider-model-slots.nim.example.yaml  provider-model-slots.yaml
council_engine/: __init__.py  agno_engine.py  core.py  langgraph_engine.py
demos/: session-pack.md  verdict-template.md
docs/: architecture.md  porting-notes.md
scripts/: convert-agents-opencode.py  council-simulation-checklist.sh  detect-providers.sh  explain-route.py  gen-star-history.py  install.sh  test-convert-agents-opencode.py  validate-protocol.py  validate.sh
site/: index.html
tests/: __init__.py  test_engines.py  test_provider_detection.py  test_registry.py
(+17 files in other folders)
