[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "council-mcp"
version = "1.0.0"
description = "Council of High Intelligence MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0"
]

[project.scripts]
council = "council_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/council_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"agents" = "council_mcp/agents"
"configs" = "council_mcp/configs"
